tests/analyzer/ok/unions.api

type st1 = union {
  a: u32,
};

type st2 = union {
  a: u32,
  b: u32,
  c: u32,
};