tests/analyzer/fail/enum-str-item.api
// expected: 1006

type bad = enum {
  a = "hello",
};
